# RetailEX

./: .env.example  .env.signing.example  .gitignore  DEPLOYMENT_GUIDE_PROD.md  Dockerfile.bridge  Dockerfile.frontend  README.md  add_all_files.ps1  add_files.ps1  admin_seed_rebaz.sql  all_user_seeds.sql  capacitor.config.js  check_auth.ts  check_cols.ts  check_data.js  check_db.ts  check_translations.py  check_translations_v2.py  check_tx_cols.ts  docker-compose.dokploy.yml  final_clean_translations.py  fix_local_db.ts  index.html  master_cleanup_translations_v3.py  old_index.html  package-lock.json  package.json  pg_all_20260427_181508.sql  pos_head1.tsx  reconstruct_ku.py  run_repair.ts  sync_translations.py  synced_translations.ts  test_period_resolution.ts  test_query.ts  test_regex.ts  test_zaincash.js  tmp_fix_translations_robust.cjs  tsc_out.txt  vercel.json  (+1 more)
.agent/: codebase_map.md  project_context.md
.agent/rules/: accounting_expert.md  backend_api_expert.md  devops_infrastructure_expert.md  performance_expert.md  principal_engineer.md  security_expert.md  software_architect.md  tauri_build_expert.md  technical_writer.md  tester.md  ui_design_expert.md
.claude/: settings.local.json
.cursor/rules/: agent-accounting-expert.mdc  retailex-project-context.mdc  ui-flat-modal-standard.mdc
.github/workflows/: deploy-vps-web.yml  desktop-release.yml
DeskApp/: Cargo.toml  installer.nsi  tauri.conf.json
DeskApp/capabilities/: migrated.json
DeskApp/icons/: icon.icns
DeskApp/resources/: bridge.cjs  install-bridge-npm.ps1  install-bridge.ps1  install-services-manual.ps1  install-services-setup.ps1  package.json  retailex-admin.ps1
DeskApp/src/: backup_service.rs  config.rs  db_ops.rs  db_utils.rs  device_fingerprint.rs  main.rs  mssql.rs  service_main.rs  setup_main.rs  setup_ui.slint  sql_bridge_main.rs  sync.rs  tools_main.rs  vpn.rs  vpn_tray.rs  windows_service_install.rs
android/: build_log.txt
android-callerid-bridge/: README.md
android/app/: build.gradle
api/: pg_query.ts
config/: postgrest.conf  postgrest.env.example
database/: BERQENAS_CLOUD_DEPLOY.md  VPS_RETAIL_EX_VE_EXFINPDKS_KURULUM.md
database/docker/: Caddyfile.api-gateway  Dockerfile.exfinpdks-web  docker-compose.postgrest-per-db.yml
database/migrations/: 000_master_schema.sql  001_demo_data.sql  001_foundation.sql  002_core_logic.sql  002_logic.sql  003_auth_setup.sql  003_seed.sql  003_vertical_and_enterprise.sql  004_seed_data.sql  005_fix_products_schema.sql  006_demo_data.sql  006_invoice_currency_multiplier.sql  007_postgrest_anon_role.sql  008_postgrest_verify_login_rpc.sql  010_suppliers.sql  014_invoice_enhancements.sql  016_firm_services.sql  018_bank_payment_plans.sql  020_bank_management.sql  021_add_firm_nr_column.sql  021_fix_cash_registers_schema.sql  022_fix_cash_lines_schema.sql  024_add_product_fields_fix.sql  025_fix_invoice_schema.sql  026_consolidate_schema_fixes.sql  027_report_templates.sql  028_standard_templates.sql  029_ensure_firm_periods.sql  029_lot_serial_tracking.sql  036_accounting_reconciliation.sql  038_security_audit_trail.sql  039_wms_picking_engine.sql  044_fix_sync_trigger_firm_context.sql  066_move_rest_tables_to_schema.sql  067_move_beauty_tables_to_schema.sql  068_fix_accounting_infrastructure.sql  071_rest_phase2_5_sync.sql  073_virman_operations.sql  README_ORDER.md
database/migrations_backup/: 001_schema.sql  002_logic.sql  003_auth_setup.sql  004_auth_patch.sql  005_enterprise_schemas.sql  006_demo_data.sql  007_sync_logs.sql  008_add_description_to_master.sql  009_material_demo_data.sql  010_suppliers.sql  011_wms_cleanup.sql  012_stock_count_update.sql  013_sales_store_id.sql  014_invoice_enhancements.sql  015_variants_and_lots.sql  017_payment_plans.sql  019_cash_management.sql  020_fix_cash_registers.sql  022_default_period_2026.sql  024_add_product_fields_fix.sql  026_consolidate_schema_fixes.sql  027_rename_varsayilan_to_default.sql  027_report_templates.sql  029_lot_serial_tracking.sql  033_sync_architecture_optimization.sql  034_logo_bridge_infrastructure.sql  035_service_health_monitoring.sql  037_exchange_rate_infrastructure.sql  038_security_audit_trail.sql  039_wms_picking_engine.sql  040_add_customer_balance.sql  041_service_transactions.sql  042_cash_lines_logo_fields.sql  045_add_cash_transaction_types_columns.sql  046_fix_product_and_lookup_schemas.sql  047_unit_sets_master_detail.sql  048_restaurant_infrastructure.sql  049_beauty_infrastructure.sql  050_wms_advanced_infrastructure.sql  051_wms_stock_count_enhancement.sql  (+29 more)
docker/: nginx.frontend.conf
scripts/: build-postgres-remote-enable.mjs  build-signed.ps1  setup-digicert.ps1  tauri-windows-signing-prep.mjs  verify-windows-installer-signature.mjs
src/: App.tsx  AppRouter.tsx  index.css  index.html  main.tsx  vite-env.d.ts  vitest.config.ts
src-tauri/: Cargo.toml  build_errors_utf8.txt  errors.txt  installer.nsi  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: bank_ops.rs  config.rs  db_ops.rs  logger.rs  main.rs  maintenance.rs  mssql.rs  service_main.rs  sync.rs  vpn.rs  vpn_keys.rs  vpn_tray.rs
src/logo-connector/: .env.example  Cargo.toml  errors.txt  install_service.ps1
src/logo-connector/src/: bridge.rs  main.rs
tempp/: add_localization_keys.py  add_sidebar_keys.py  check_data.ts  check_db_local.js  check_db_standalone.js  check_firms.ts  check_logic.ts  check_sales_tables.ts  check_schema.ts  check_table_rex_1_1.js  check_tables.ts  check_tx_tables.ts  final_master_cleanup.py  find_duplicates_robust.py  fix_encoding.py  fix_intentional.py  fix_pos_invoices.js  list_tables.ts  master_cleanup_translations.py  master_cleanup_translations_v2.py  master_cleanup_translations_v4.py  pos_head2.txt  pos_head3.tsx  query  reconstruct_ku_v2.py  reconstructed_ku.txt  seed_unitsets.sql  servis_onarma.bat  servis_yonetimi.bat  test_period_resolution.js  verify_tables.ts  ye-mek-sample.html
tools/: database_manager.py
(+686 files in other folders)
