[package]
name = "retailex"
version = "0.1.19"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "retailex"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = [ "api-all", "devtools", "updater"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
bytes = "1.5"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
tiberius = { version = "0.12", features = ["chrono", "time", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
machine-uid = "0.5.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
base64 = "0.21"
enigo = "0.1.2" # Input Simulation (Mouse/Keyboard)
screenshots = "0.8" # Screen Capture
image = "0.24" # Image Processing (JPEG Encoding)
boringtun = "0.6"
wintun = "0.4"
x25519-dalek = "= 2.0.0-rc.3"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
stunclient = "0.1"
windows = { version = "0.52", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
ed25519-dalek = "1.0"
aes-gcm = "0.10"
sha2 = "0.10"
rust_decimal = { version = "1.32", features = ["serde-float", "db-tokio-postgres"] }
lapin = "2.3" # RabbitMQ Client
redis = { version = "0.23", features = ["tokio-comp"] } # Redis Client
deadpool-lapin = "0.12" # RabbitMQ Connection Pooling
amq-protocol = "7.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "retailex"
path = "src/main.rs"

[[bin]]
name = "RetailEX_Service"
path = "src/service_main.rs"

[[bin]]
name = "RetailEX_VPN"
path = "src/vpn_tray.rs"

[dependencies.windows-service]
version = "0.6"
