[package]
name = "retailex-logo-connector"
version = "1.0.0"
edition = "2021"
authors = ["RetailEX Team"]
description = "RetailEX - Logo ERP Connector Windows Service"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# MS SQL (Logo)
tiberius = { version = "0.12", features = ["tds73", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-lite = "2.1"

# Database (PostgreSQL)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

# Windows Service
windows-service = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID & Time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
